Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2984

Welcome screen not looking good

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.1.0-rc1
    • Qt Creator 2.1.0-rc1
    • All Other Issues
    • None
    • Linux

    Description

      The welcomes screen is not looking good at the moment as parts of the text flow out of the window and are thus unreadable.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dmolkent Daniel Molkentin (Inactive Nokia Account!) (Inactive)
            nath Niels Weber
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes