Fix welcome screen with 120 dpi and translations with overlength

Task-number: QTCREATORBUG-2984
Reviewed-by: dt